20.work_ingress/demo-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-lb
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
# これをコメントアウトすると、自動でIPが割り当てられる
#      nodePort: 30082
  selector:
    app: demo-app
