20.work_ingress/sample-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-lb
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
# これをコメントアウトすると、自動でIPが割り当てられる
      nodePort: 30082
  selector:
    app: sample-app
