20.work_ingress/demo-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo.com
    http:
      paths:
      - path: "/path1"
        pathType: Prefix
        backend:
          service:
            name: demo-lb
            port:
              number: 8080
