20.work_ingress/sample-ingress.yml
---
### ingressの情報を参考に作成
### https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-localhost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: "/a"
        pathType: Prefix
        backend:
          service:
            name: sample-lb
            port:
              number: 8080
